--- a/docs/接口/信息认证.md
+++ b/docs/接口/信息认证.md
@@ -63,7 +63,7 @@
 | ---------- | ------ | ------------------------------- |
 | nextStep      | int   | 下一步验证步骤      |
 
-#### POST /api/verify/stepThree 验证第四步(银行信息)
+#### POST /api/verify/stepFour 验证第四步(银行信息)
 
 ##### 请求参数
 
