--- a/docs/接口/登录注册.md
+++ b/docs/接口/登录注册.md
@@ -8,6 +8,7 @@
 | -------- | ------ | -------- | -------------- |
 | phone | string | 是       | 登录手机号 |
 | smsCode    | string | 是       | 验证码        |
+| inviteCode   | string | 否       | 邀请人code       |
 
 ##### 响应参数
 
