--- a/docs/接口/还款.md
+++ b/docs/接口/还款.md
@@ -15,7 +15,7 @@
 | paymethod      | string   | 还款方式      |
 | params   | object |  还款参数 |
 
-#### GET /api/getRepayMethodList 还款方式列表
+#### GET /api/repay/methods 还款方式列表
 
 ##### 请求参数
 无
