--- a/docs/接口/首页.md
+++ b/docs/接口/首页.md
@@ -1,6 +1,7 @@
 #### 首页
 
-#### GET /api/home 首页
+
+#### GET /api/home  用户贷款初始信息
 
 ##### 请求参数
 
@@ -10,7 +11,45 @@
 
 | 响应参数名 | 类型   | 说明                            |
 | ---------- | ------ | ------------------------------- |
-| creditAmount      | int   | 初始额度      |
-| userType    | int | 用户类型, 0-首贷 1-复贷 |
-| canBorrow       | int   | 是否能够申请贷款 0-暂不能申请 1-能申请  |
-| verifyStep       | int   | 用户认证第几步, 1,2,3,4 |
+| defaultAmount | int   | 默认额度      |
+| maxCreditAmount | int | 用户最大授信额度 |
+| minCreditAmount | int | 用户最小授信额度 |
+| products | array   | 产品列表   |
+| coupons  | array   | 提额券 |
+
+eg:
+```json
+"defaultAmount": 15000,
+"maxCreditAmount": 20000,
+"minCreditAmount": 10000,
+"products": [
+    {
+        "productId": 1,
+        "desc": "7 days",
+        "day": 7
+    },
+    {
+        "productId": 2,
+        "desc": "14 days",
+        "day": 14
+    },
+    ...
+],
+"coupons": [
+    {
+        "couponId": 1,
+        "amount": 2000,
+        "desc": "N5000 credit increase coupon",
+        "expireAt": "2022-09-21",
+        "isDisable": 1,
+    },
+    {
+        "couponId": 2,
+        "amount": 14,
+        "desc":  "N5000 credit increase coupon",
+        "expireAt": "2022-09-21",
+        "isDisable": 0,
+    },
+    ...
+]
+```
